--- a/index.html
+++ b/index.html
@@ -28,5 +28,14 @@
         <a href="#" class="btn btn-white btn-animated">Discover our tours</a>
       </div>
     </header>
+    <main>
+      <section class="section-about">
+        <h2 class="heading-secondary">
+        Exiting tours for 
+        </h2>
+
+      </section>
+
+    </main>
   </body>
 </html>
